RESOLVED FIXED186435
REGRESSION(r230930): Link drag image is very blurry
https://bugs.webkit.org/show_bug.cgi?id=186435
Summary REGRESSION(r230930): Link drag image is very blurry
Brent Fulgham
Reported 2018-06-08 09:56:43 PDT
When dragging a link, the link drag image is super blurry.
Attachments
Patch (19.49 KB, patch)
2018-06-08 10:20 PDT, Brent Fulgham
no flags
Patch for landing (19.26 KB, patch)
2018-06-08 10:31 PDT, Brent Fulgham
no flags
Patch for landing (18.81 KB, patch)
2018-06-08 10:33 PDT, Brent Fulgham
no flags
Patch for landing (18.80 KB, patch)
2018-06-08 10:39 PDT, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2018-06-08 09:59:15 PDT
This is more fallout from disconnecting the WebContent process from the WindowServer. The NSImage logic wants to ask the screen for its display scale, but can't and so it defaults to a scale factor of 1. This causes us to get a 1x image, which is scaled to the actual screen resolution resulting in the blurriness. I checked the code paths for selection drag, attachment drag, and image drag and all properly address scale factor. It looks like links were the only thing not grabbing scale factor from the device already.
Brent Fulgham
Comment 2 2018-06-08 09:59:56 PDT
We need to help NSImage know the proper scale factor without talking to NSScreen.
Brent Fulgham
Comment 3 2018-06-08 10:20:30 PDT
Tim Horton
Comment 4 2018-06-08 10:23:29 PDT
Comment on attachment 342283 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342283&action=review > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:13 > + * 3. Neither the name of Apple Inc. ("Apple") nor the names of This is not the correct license. > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:36 > + Extra newlines? > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:38 > +@implementation NSImage (WebKitExtras) No need for the category to have a name.
Brent Fulgham
Comment 5 2018-06-08 10:27:36 PDT
(In reply to Tim Horton from comment #4) > Comment on attachment 342283 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=342283&action=review > > > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:13 > > + * 3. Neither the name of Apple Inc. ("Apple") nor the names of > > This is not the correct license. > > > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:36 > > + > > Extra newlines? > > > Source/WebCore/platform/graphics/mac/WebKitNSImageExtras.mm:38 > > +@implementation NSImage (WebKitExtras) > > No need for the category to have a name. Uh oh! And lots of build failures. More work needed!
Brent Fulgham
Comment 6 2018-06-08 10:30:16 PDT
Comment on attachment 342283 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342283&action=review > Source/WebCore/WebCore.xcodeproj/project.pbxproj:9315 > 7A29BA67187B732200F29CEB /* TemporaryOpenGLSetting.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = TemporaryOpenGLSetting.h; sourceTree = "<group>"; }; Doh! Stupid Xcode.
Brent Fulgham
Comment 7 2018-06-08 10:31:27 PDT
Created attachment 342285 [details] Patch for landing
Brent Fulgham
Comment 8 2018-06-08 10:33:33 PDT
Created attachment 342287 [details] Patch for landing
Brent Fulgham
Comment 9 2018-06-08 10:39:55 PDT
Created attachment 342290 [details] Patch for landing
WebKit Commit Bot
Comment 10 2018-06-08 11:20:50 PDT
Comment on attachment 342290 [details] Patch for landing Clearing flags on attachment: 342290 Committed r232628: <https://trac.webkit.org/changeset/232628>
WebKit Commit Bot
Comment 11 2018-06-08 11:20:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2018-06-08 11:21:26 PDT
Brent Fulgham
Comment 13 2018-06-08 11:48:20 PDT
This was actually: <rdar://problem/40797202>
Note You need to log in before you can comment on or make changes to this bug.